--- a/webserver/opentrain/common/templates/common/base.html
+++ b/webserver/opentrain/common/templates/common/base.html
@@ -58,8 +58,9 @@
 		<!-- END BLOCK CONTENT -->
 		<div class="container">
 			<hr/>
-			<footer class="footer">
+			<footer class="footer">  
 				<img src="/static/common/img/open-train.png" width="40" height="40">
+				From <a href="https://hackita.hasadna.org.il">Hackita - 2014</a>
 				<a href="https://github.com/oferb/OpenTrainApp/blob/master/APKs/OpenTrainApp.apk?raw=true"><span class="glyphicon glyphicon-download"></span></a>
 				Download the <a href="https://github.com/oferb/OpenTrainApp/blob/master/APKs/OpenTrainApp.apk?raw=true">app</a> (Alpha version - on your own risk....)
 			</footer>
