--- a/webserver/opentrain/gtfs/templates/gtfs/search_results.html
+++ b/webserver/opentrain/gtfs/templates/gtfs/search_results.html
@@ -5,7 +5,7 @@
 <script src="{% static 'gtfs/js/gtfs.js' %}"></script>
 
 {% if results %}
-<h3>{{results | length }} results for {{when | nicedate }}</h3>
+<h3>{{results | length }} {% 'results for' %} {{when | nicedate }}</h3>
 <button id="trip_details_button_global">
 	Toggle
 </button>
@@ -13,7 +13,7 @@
 <div class="row">
 	<table class="table-bordered table-hover table-striped col-md-6 results-table">
 		<tr>
-			<td>Route name</td>
+			<td>{% trans 'Route name' %}</td>
 			<td>{{result.trip.route.route_long_name}}</td>
 		</tr>
 		<tr>
@@ -21,9 +21,9 @@
 			<td>
 			<p class="text-center">
 				<button id="trip_details_button_{{forloop.counter}}">
-					Toggle
+					{% %trans 'Toggle' %}
 				</button>
-				Trip Details
+				{% trans 'Trip Details' %}
 			</p>
 			<div id="trip_details_{{forloop.counter}}">
 				{% include "gtfs/trip_details.html" with trip=result.trip %}
@@ -52,7 +52,7 @@
 		</tr>
 		<tr>
 			<td>{% trans 'Show on Map' %}</td>
-			<td><a target="_blank" href="/gtfs/maps/{{result.trip.trip_id}}/?zoom_stop_id={{result.stop.stop_id}}">Map</a></td>
+			<td><a target="_blank" href="/gtfs/maps/{{result.trip.trip_id}}/?zoom_stop_id={{result.stop.stop_id}}">{% trans 'Map' %}</a></td>
 		</tr>
 	</table>
 </div>
@@ -66,5 +66,5 @@ $(document).ready(function() {
 });
 </script>
 {% else %}
-<h3>No Results</h3>
+<h3>{% trans 'No Results' %}</h3>
 {% endif %}
