--- a/webserver/opentrain/gtfs/templates/gtfs/trip_details.html
+++ b/webserver/opentrain/gtfs/templates/gtfs/trip_details.html
@@ -5,7 +5,7 @@
 		<td>{% trans 'Seq' %}</td>
 		<td>{% trans 'Name' %}</td>
 		<td>{% trans 'In' %}</td>
-		<td>{% tarans 'Out' %}</td>
+		<td>{% trans 'Out' %}</td>
 	</tr>
 	{%for stop_time in trip.get_stop_times%}
 	<tr>
