--- a/webserver/opentrain/gtfs/templates/gtfs/search_results.html
+++ b/webserver/opentrain/gtfs/templates/gtfs/search_results.html
@@ -14,7 +14,7 @@
 	<table class="table-bordered table-hover table-striped col-md-6 results-table">
 		<tr>
 			<td>{% trans 'Route name' %}</td>
-			<td>{{result.trip.route.route_long_name}}</td>
+			<td>{% trans result.trip.route.route_long_name %}</td>
 		</tr>
 		<tr>
 			<td>{% trans 'Trip Details' %}</td>
