--- a/webserver/opentrain/gtfs/templates/gtfs/search_results.html
+++ b/webserver/opentrain/gtfs/templates/gtfs/search_results.html
@@ -5,7 +5,7 @@
 <script src="{% static 'gtfs/js/gtfs.js' %}"></script>
 
 {% if results %}
-<h3>{{results | length }} {% trans 'results for' %} {{when | nicedate }}</h3>
+<h3>{{results | length }} {% trans 'results for' %} {{when | nicedate | safe }}</h3>
 <button id="trip_details_button_global">
 	Toggle
 </button>
