--- a/webserver/opentrain/common/templates/common/base.html
+++ b/webserver/opentrain/common/templates/common/base.html
@@ -27,8 +27,9 @@
 
 	<body>
 		{% block scriptstart %}
-		{% endblock %}
+		{% endblock %}  
 		<script src="{% static 'common/js/ext/jquery-1.10.2.min.js' %}"></script>
+		<script src="{% static 'jsi18n/he/django.js' %}"></script>
 		<script src="{% static 'common/bs3-rtl/js/bootstrap.min.js' %}"></script>
 		<script src="{% static 'common/js/ot_utils.js'%}"></script>
 		<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
